--- a/source/_posts/dot net pro tips/2020-08-14-intro.md
+++ b/source/_posts/dot net pro tips/2020-08-14-intro.md
@@ -5,7 +5,7 @@ date: 2020-08-14 08:20:00
 image: https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/.NET_Core_Logo.svg/1200px-.NET_Core_Logo.svg.png
 description: "Introduction to pro tips for .NET Core projects with multiple database providers"
 tags: .net-core .net tips efcore
-categories:
+categories: dotnet pro tips
 twitter_text: ".NET Pro tips Multiple Databases Providers Introduction"
 username: "Matheus Costa Vieira"
 user_description: Sênior Developer
