better categories descriptions

--- a/source/_posts/dot net pro tips/2020-08-14-intro.md
+++ b/source/_posts/dot net pro tips/2020-08-14-intro.md
@@ -4,8 +4,7 @@ title: ".NET Pro tips Multiple Databases Providers Introduction"
 date: 2020-08-14 08:20:00
 image: https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/.NET_Core_Logo.svg/1200px-.NET_Core_Logo.svg.png
 description: "Introduction to pro tips for .NET Core projects with multiple database providers"
-tags: .net-core .net tips efcore
-categories: dotnet pro tips
+categories: pt-br dotnet-pro-tips
 twitter_text: ".NET Pro tips Multiple Databases Providers Introduction"
 username: "Matheus Costa Vieira"
 user_description: Sênior Developer
@@ -55,4 +54,4 @@ Esse conceito também está relacionado ao princípio Single Responsability onde
 
 Para que a leitura não seja cansativo irei dividir em diversas partes esse artigo, mantendo bons exemplos.
 
-{% include posts/pro-tips-multiple-db-providers/related.md %}
+{% include posts/pro-tips-multiple-db-providers/related-pt-br.md %}
