fixed links changed contact next page

--- a/source/_posts/dot net pro tips/2020-08-14-intro.md
+++ b/source/_posts/dot net pro tips/2020-08-14-intro.md
@@ -14,7 +14,9 @@ photo: mvieira.jpg
 
 Seja bem vindo a uma série de artigos relacionado a utilização avançada do framework [.NET Core da Microsoft](https://docs.microsoft.com/pt-br/dotnet/core/).
 
-O objetivo maior aqui é compartilhar conhecimento, com alguma introdução, porém nada que seja igual à própria documentação, que por sinal é muito bem feita e com diversos exemplis úteis.
+O objetivo maior aqui é compartilhar conhecimento, com alguma introdução, porém nada que seja igual à própria documentação, que por sinal é muito bem feita e com diversos exemplos úteis.
+
+> Esse é um projeto em construção portando mais posts virão
 
 Nessa série de artigos estarei mostrando um caso de uso onde eu devia conectar em diversos bancos de clientes diversos. Porém cada cliente que disponibilizava a sua infraestrutura para que pudéssemos criar a estrutura do SQL a ser utilizado. Portanto ora estavamos conectando a um MSSqlServer, ora um PostGreSQL, ora MySql.
 
