--- a/source/_posts/dot net pro tips/2020-08-14-intro.md
+++ b/source/_posts/dot net pro tips/2020-08-14-intro.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-title: ".NET Pro tips Multiple Databases Providers Introduction"
+title: ".NET Pro tips - Utilizando múltiplos provedores de banco de dados"
 date: 2020-08-14 08:20:00
 image: https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/.NET_Core_Logo.svg/1200px-.NET_Core_Logo.svg.png
 description: "Introduction to pro tips for .NET Core projects with multiple database providers"
+description: "Introdução à criação de um projeto para acessar o banco a partir de diversos providers de banco"
 categories: pt-br dotnet-pro-tips
-twitter_text: ".NET Pro tips Multiple Databases Providers Introduction"
+twitter_text: ".NET Pro tips Utilizando múltiplos provedores de banco de dados"
 username: "Matheus Costa Vieira"
 user_description: Sênior Developer
 email: matheus.costa.vieira@gmail.com
