adjusted some interview question layout and add more questions

--- a/source/_interview_questions/1.md
+++ b/source/_interview_questions/1.md
@@ -1,7 +1,7 @@
 ---
 layout: interview_question
-title: "1. [Resource Management] - Descreva em detalhes um conceito chave sobre Resource Management relevante para arquitetura no Azure"
-tags: [Azure, DevOps, Resource Management] 
+title: "Descreva em detalhes um conceito chave sobre Resource Management relevante para arquitetura no Azure"
+tags: [Azure, DevOps, Resource Management, Cloud] 
 order: 1
 ---
 
