--- a/source/_interview_questions/12.md
+++ b/source/_interview_questions/12.md
@@ -1,6 +1,6 @@
 ---
 layout: interview_question
-title: "12. [Managed Identity] - O que é Managed Identity no Azure e qual sua importância para segurança?"
+title: "O que é Managed Identity no Azure e qual sua importância para segurança?"
 tags: [Azure, Managed Identity, Security]
 order: 12
 ---
