--- a/source/_interview_questions/13.md
+++ b/source/_interview_questions/13.md
@@ -1,6 +1,6 @@
 ---
 layout: interview_question
-title: "13. [Environment Strategies] - Descreva em detalhes um conceito chave sobre Environment Strategies relevante para arquitetura no Azure"
+title: "Descreva em detalhes um conceito chave sobre Environment Strategies relevante para arquitetura no Azure"
 tags: [Azure, Environment Strategies, Naming Convention, Tagging]
 order: 13
 ---
