--- a/source/_interview_questions/14.md
+++ b/source/_interview_questions/14.md
@@ -1,6 +1,6 @@
 ---
 layout: interview_question
-title: "14. [CLI Commands] - Descreva em detalhes um conceito chave sobre CLI Commands relevante para arquitetura no Azure"
+title: "Descreva em detalhes um conceito chave sobre CLI Commands relevante para arquitetura no Azure"
 tags: [Azure, CLI, Automação, DevOps]
 order: 14
 ---
