--- a/source/_interview_questions/16.md
+++ b/source/_interview_questions/16.md
@@ -1,6 +1,6 @@
 ---
 layout: interview_question
-title: "16. [Azure Storage] - Descreva em detalhes um conceito chave sobre Azure Storage relevante para arquitetura no Azure"
+title: "Descreva em detalhes um conceito chave sobre Azure Storage relevante para arquitetura no Azure"
 tags: [Azure, Storage, Resiliência, Disponibilidade]
 order: 16
 ---
