--- a/source/_interview_questions/18.md
+++ b/source/_interview_questions/18.md
@@ -1,6 +1,6 @@
 ---
 layout: interview_question
-title: "18. [Service Bus vs Event Hub] - Compare Azure Service Bus e Event Hub. Quando utilizar cada um?"
+title: "Compare Azure Service Bus e Event Hub. Quando utilizar cada um?"
 tags: [Azure, Messaging, Event-Driven, Integração]
 order: 18
 ---
