--- a/source/_interview_questions/2.md
+++ b/source/_interview_questions/2.md
@@ -1,7 +1,7 @@
 ---
 layout: interview_question
-title: "2. [Environment Strategies] - Descreva em detalhes um conceito chave sobre Environment Strategies relevante para arquitetura no Azure"
-tags: [Azure, DevOps, Environment Strategies]
+title: "Descreva em detalhes um conceito chave sobre Environment Strategies relevante para arquitetura no Azure"
+tags: [Azure, DevOps, Environment Strategies, Cloud]
 order: 1
 ---
 
