--- a/source/_interview_questions/20.md
+++ b/source/_interview_questions/20.md
@@ -1,6 +1,6 @@
 ---
 layout: interview_question
-title: "20. [CI/CD pipelines] - Descreva em detalhes um conceito chave sobre CI/CD pipelines relevante para arquitetura no Azure"
+title: "Descreva em detalhes um conceito chave sobre CI/CD pipelines relevante para arquitetura no Azure"
 tags: [Azure, CI/CD, DevOps, Automação]
 order: 20
 ---
