--- a/source/_interview_questions/22.md
+++ b/source/_interview_questions/22.md
@@ -1,7 +1,7 @@
 ---
 layout: interview_question
-title: "[Azure Storage] - Descreva em detalhes um conceito chave sobre Azure Storage relevante para arquitetura no Azure."
-tags: [Azure Storage, Azure, arquitetura]
+title: "Descreva em detalhes um conceito chave sobre Azure Storage relevante para arquitetura no Azure"
+tags: [Azure Storage, Azure, Arquitetura, Cloud]
 order: 22
 ---
 
