--- a/source/_interview_questions/23.md
+++ b/source/_interview_questions/23.md
@@ -1,7 +1,7 @@
 ---
 layout: interview_question
-title: "[Managed Identity] - O que é Managed Identity no Azure e qual sua importância para segurança?"
-tags: [Managed Identity, Azure, segurança]
+title: "Descreva em detalhes um conceito chave sobre Managed Identity relevante para arquitetura no Azure"
+tags: [Managed Identity, Azure, Arquitetura, Segurança, Cloud]
 order: 23
 ---
 
