--- a/source/_interview_questions/24.md
+++ b/source/_interview_questions/24.md
@@ -1,7 +1,7 @@
 ---
 layout: interview_question
-title: "[Microservices] - Descreva em detalhes um conceito chave sobre Microservices relevante para arquitetura no Azure."
-tags: [Microservices, Azure, arquitetura]
+title: "Descreva em detalhes um conceito chave sobre Microservices relevante para arquitetura no Azure."
+tags: [Microservices, Azure, Arquitetura, Cloud]
 order: 24
 ---
 
