--- a/source/_interview_questions/25.md
+++ b/source/_interview_questions/25.md
@@ -1,7 +1,7 @@
 ---
 layout: interview_question
-title: "[Monitoring] - Descreva em detalhes um conceito chave sobre Monitoring relevante para arquitetura no Azure."
-tags: [Monitoring, Azure, arquitetura]
+title: "Descreva em detalhes um conceito chave sobre Monitoring relevante para arquitetura no Azure."
+tags: [Monitoring, Azure, Arquitetura, Cloud]
 order: 25
 ---
 
