--- a/source/_interview_questions/26.md
+++ b/source/_interview_questions/26.md
@@ -1,6 +1,7 @@
 ---
-title: "App Service & Function App - Conceito chave relevante para arquitetura no Azure"
-tags: [App Service, Function App, Azure, Arquitetura]
+layout: interview_question
+title: "Descreva em detalhes um conceito chave sobre App Service & Function App relevante para arquitetura no Azure"
+tags: [App Service, Function App, Azure, Arquitetura, Cloud]
 order: 26
 ---
 
