--- a/source/_interview_questions/3.md
+++ b/source/_interview_questions/3.md
@@ -1,7 +1,7 @@
 ---
 layout: interview_question
-title: "3. [Resource Management] - Descreva em detalhes um conceito chave sobre Resource Management relevante para arquitetura no Azure"
-tags: [Azure, Resource Management, RBAC]
+title: "Descreva em detalhes um conceito chave sobre Resource Management relevante para arquitetura no Azure"
+tags: [Azure, Resource Management, RBAC, Cloud]
 order: 3
 ---
 
