--- a/source/_interview_questions/30.md
+++ b/source/_interview_questions/30.md
@@ -1,6 +1,7 @@
 ---
-title: "Service Bus vs Event Hub - Quando utilizar cada um?"
-tags: [Service Bus, Event Hub, Azure, Arquitetura]
+layout: interview_question
+title: "Compare Azure Service Bus e Event Hub. Quando utilizar cada um?"
+tags: [Service Bus, Event Hub, Azure, Arquitetura, Cloud]
 order: 30
 ---
 
