--- a/source/_interview_questions/31.md
+++ b/source/_interview_questions/31.md
@@ -1,6 +1,7 @@
 ---
-title: "Bicep & IaC - Provisionando ambientes no Azure e vantagens"
-tags: [Bicep, IaC, Azure, Arquitetura]
+layout: interview_question
+title: "Como você usaria Bicep para provisionar um ambiente no Azure? Quais as vantagens dessa abordagem?"
+tags: [Bicep, IaC, Azure, Arquitetura, Cloud]
 order: 31
 ---
 
