--- a/source/_interview_questions/32.md
+++ b/source/_interview_questions/32.md
@@ -1,6 +1,7 @@
 ---
-title: "Security - Conceito chave relevante para arquitetura no Azure (2)"
-tags: [Security, Azure, Arquitetura]
+layout: interview_question
+title: "Descreva em detalhes um conceito chave sobre Security relevante para arquitetura no Azure"
+tags: [Security, Azure, Arquitetura, Cloud]
 order: 32
 ---
 
