--- a/source/_interview_questions/33.md
+++ b/source/_interview_questions/33.md
@@ -1,6 +1,7 @@
 ---
-title: "AKS vs ACA - Diferenças principais entre Azure Kubernetes Service e Azure Container Apps"
-tags: [AKS, ACA, Azure, Containers, Arquitetura]
+layout: interview_question
+title: "Explique as principais diferenças entre Azure Kubernetes Service (AKS) e Azure Container Apps (ACA)"
+tags: [AKS, ACA, Azure, Containers, Arquitetura, Cloud]
 order: 33
 ---
 
