--- a/source/_interview_questions/35.md
+++ b/source/_interview_questions/35.md
@@ -1,6 +1,7 @@
 ---
-title: "Developer Experience - Conceito chave relevante para arquitetura no Azure"
-tags: [Developer Experience, DX, Azure, Arquitetura]
+layout: interview_question
+title: "Descreva em detalhes um conceito chave sobre Developer Experience relevante para arquitetura no Azure"
+tags: [Developer Experience, DX, Azure, Arquitetura, Cloud]
 order: 35
 ---
 
