--- a/source/_interview_questions/37.md
+++ b/source/_interview_questions/37.md
@@ -1,6 +1,7 @@
 ---
-title: "DX - Conceito chave relevante para arquitetura no Azure (2)"
-tags: [DX, Azure, Arquitetura]
+layout: interview_question
+title: "Descreva em detalhes um conceito chave sobre DX relevante para arquitetura no Azure"
+tags: [DX, Azure, Arquitetura, Cloud]
 order: 37
 ---
 
