--- a/source/_interview_questions/38.md
+++ b/source/_interview_questions/38.md
@@ -1,6 +1,7 @@
 ---
-title: "Monitoring - Conceito chave relevante para arquitetura no Azure"
-tags: [Monitoring, Azure, Arquitetura]
+layout: interview_question
+title: "Descreva em detalhes um conceito chave sobre Monitoring relevante para arquitetura no Azure"
+tags: [Monitoring, Azure, Arquitetura, Cloud]
 order: 38
 ---
 
