--- a/source/_interview_questions/39.md
+++ b/source/_interview_questions/39.md
@@ -1,6 +1,7 @@
 ---
-title: "Terraform vs Bicep - Conceito chave relevante para arquitetura no Azure"
-tags: [Terraform, Bicep, IaC, Azure, Arquitetura]
+layout: interview_question
+title: "Descreva em detalhes um conceito chave sobre Terraform vs Bicep relevante para arquitetura no Azure"
+tags: [Terraform, Bicep, IaC, Azure, Arquitetura, Cloud]
 order: 39
 ---
 
