--- a/source/_interview_questions/4.md
+++ b/source/_interview_questions/4.md
@@ -1,7 +1,7 @@
 ---
 layout: interview_question
-title: "4. [DX] - Descreva em detalhes um conceito chave sobre DX relevante para arquitetura no Azure"
-tags: [Azure, DX, Developer Experience]
+title: "Descreva em detalhes um conceito chave sobre DX relevante para arquitetura no Azure"
+tags: [Azure, DX, Developer Experience, Cloud]
 order: 4
 ---
 
