--- a/source/_interview_questions/40.md
+++ b/source/_interview_questions/40.md
@@ -1,6 +1,7 @@
 ---
-title: "GitHub Actions - Pipeline de CI/CD para deploy em Azure"
-tags: [GitHub Actions, CI/CD, Azure, DevOps, Arquitetura]
+layout: interview_question
+title: "Descreva como construir um pipeline de CI/CD usando GitHub Actions para deploy em Azure"
+tags: [GitHub Actions, CI/CD, Azure, DevOps, Arquitetura, Cloud, GitHub]
 order: 40
 ---
 
