--- a/source/_interview_questions/5.md
+++ b/source/_interview_questions/5.md
@@ -1,7 +1,7 @@
 ---
 layout: interview_question
-title: "5. [Authentication] - Descreva em detalhes um conceito chave sobre Authentication relevante para arquitetura no Azure"
-tags: [Azure, Authentication, Managed Identity]
+title: "Descreva em detalhes um conceito chave sobre Authentication relevante para arquitetura no Azure"
+tags: [Azure, Authentication, Managed Identity, Cloud]
 order: 5
 ---
 
