--- a/source/_interview_questions/6.md
+++ b/source/_interview_questions/6.md
@@ -1,7 +1,7 @@
 ---
 layout: interview_question
-title: "6. [Security] - Descreva em detalhes um conceito chave sobre Security relevante para arquitetura no Azure"
-tags: [Azure, Security, Encryption]
+title: "Descreva em detalhes um conceito chave sobre Security relevante para arquitetura no Azure"
+tags: [Azure, Security, Encryption, Cloud]
 order: 6
 ---
 
