--- a/source/_interview_questions/7.md
+++ b/source/_interview_questions/7.md
@@ -1,7 +1,7 @@
 ---
 layout: interview_question
-title: "7. [GitHub Actions] - Descreva como construir um pipeline de CI/CD usando GitHub Actions para deploy em Azure"
-tags: [Azure, GitHub Actions, CI/CD, DevOps]
+title: "Descreva como construir um pipeline de CI/CD usando GitHub Actions para deploy em Azure"
+tags: [Azure, GitHub Actions, CI/CD, DevOps, Cloud, GitHub]
 order: 7
 ---
 
