--- a/source/_interview_questions/8.md
+++ b/source/_interview_questions/8.md
@@ -1,7 +1,7 @@
 ---
 layout: interview_question
-title: "8. [App Service & Function App] - Descreva em detalhes um conceito chave sobre App Service & Function App relevante para arquitetura no Azure"
-tags: [Azure, App Service, Function App, Autoscaling]
+title: "Descreva em detalhes um conceito chave sobre App Service & Function App relevante para arquitetura no Azure"
+tags: [Azure, App Service, Function App, Autoscaling, Cloud]
 order: 8
 ---
 
