--- a/source/_interview_questions/9.md
+++ b/source/_interview_questions/9.md
@@ -1,7 +1,7 @@
 ---
 layout: interview_question
-title: "9. [CLI Commands] - Descreva em detalhes um conceito chave sobre CLI Commands relevante para arquitetura no Azure"
-tags: [Azure, CLI, Automation]
+title: "Descreva em detalhes um conceito chave sobre CLI Commands relevante para arquitetura no Azure"
+tags: [Azure, CLI, Automation, Cloud]
 order: 9
 ---
 
