--- a/source/_interview_questions/10.md
+++ b/source/_interview_questions/10.md
@@ -1,6 +1,6 @@
 ---
 layout: interview_question
-title: "10. [GitHub Actions] - Descreva como construir um pipeline de CI/CD usando GitHub Actions para deploy em Azure"
+title: "Descreva como construir um pipeline de CI/CD usando GitHub Actions para deploy em Azure"
 tags: [Azure, GitHub Actions, CI/CD, DevOps]
 order: 10
 ---
