--- a/source/_interview_questions/11.md
+++ b/source/_interview_questions/11.md
@@ -1,6 +1,6 @@
 ---
 layout: interview_question
-title: "11. [.NET + Azure] - Descreva em detalhes um conceito chave sobre .NET + Azure relevante para arquitetura no Azure"
+title: "Descreva em detalhes um conceito chave sobre .NET + Azure relevante para arquitetura no Azure"
 tags: [Azure, .NET, SDK]
 order: 11
 ---
