--- a/source/_interview_questions/15.md
+++ b/source/_interview_questions/15.md
@@ -1,6 +1,6 @@
 ---
 layout: interview_question
-title: "15. [RBAC] - Descreva em detalhes um conceito chave sobre RBAC relevante para arquitetura no Azure"
+title: "Descreva em detalhes um conceito chave sobre RBAC relevante para arquitetura no Azure"
 tags: [Azure, RBAC, Segurança, Governança]
 order: 15
 ---
