--- a/source/_interview_questions/17.md
+++ b/source/_interview_questions/17.md
@@ -1,6 +1,6 @@
 ---
 layout: interview_question
-title: "17. [Cost Management] - Descreva em detalhes um conceito chave sobre Cost Management relevante para arquitetura no Azure"
+title: "Descreva em detalhes um conceito chave sobre Cost Management relevante para arquitetura no Azure"
 tags: [Azure, Cost Management, FinOps, Governança]
 order: 17
 ---
