--- a/source/_interview_questions/19.md
+++ b/source/_interview_questions/19.md
@@ -1,6 +1,6 @@
 ---
 layout: interview_question
-title: "19. [Service Bus vs Event Hub] - Compare Azure Service Bus e Event Hub. Quando utilizar cada um? (2)"
+title: "Compare Azure Service Bus e Event Hub. Quando utilizar cada um? (2)"
 tags: [Azure, Messaging, Event-Driven, Integração]
 order: 19
 ---
