--- a/source/_interview_questions/34.md
+++ b/source/_interview_questions/34.md
@@ -1,6 +1,7 @@
 ---
-title: "Authentication - Conceito chave relevante para arquitetura no Azure"
-tags: [Authentication, Azure, Arquitetura]
+layout: interview_question
+title: "Descreva em detalhes um conceito chave sobre Authentication relevante para arquitetura no Azure"
+tags: [Authentication, Azure, Arquitetura, Cloud]
 order: 34
 ---
 
