--- a/source/_interview_questions/36.md
+++ b/source/_interview_questions/36.md
@@ -1,6 +1,7 @@
 ---
-title: "DevOps - Conceito chave relevante para arquitetura no Azure"
-tags: [DevOps, Azure, Arquitetura]
+layout: interview_question
+title: "Descreva em detalhes um conceito chave sobre DevOps relevante para arquitetura no Azure"
+tags: [DevOps, Azure, Arquitetura, Cloud]
 order: 36
 ---
 
