--- a/source/_interview_questions/7.md
+++ b/source/_interview_questions/7.md
@@ -26,6 +26,7 @@ Um pipeline de CI/CD (Integração Contínua e Entrega Contínua) automatiza eta
 
 Suponha que você queira automatizar o deploy de uma aplicação Node.js para o Azure App Service. O pipeline pode ser definido assim:
 
+{% raw %}
 ```yaml
 name: CI/CD para Azure App Service
 
@@ -67,6 +68,7 @@ jobs:
           slot-name: 'production'
           package: '.'
 ```
+{% endraw %}
 
 **Explicação dos principais pontos:**
 
